# django-signoffs

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  OLD_setup.cfg  OLD_setup.py  README.md  README.rst  bikeracksdb.sqlite3  dev_requirements.txt  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  testdb.sqlite3  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pytest.yaml  release.yaml  tox.yaml
bikeracks_app/: BikeRackData.csv  apps.py  bikeracks.json  helpers.py  models.py  settings.py  views.py
bikeracks_app/migrations/: 0001_initial.py
demo/: README.md  settings.py  urls.py  wsgi.py
demo/article/: __init__.py  admin.py  apps.py  forms.py  signoffs.py  urls.py  views.py
demo/article/migrations/: 0001_initial.py
demo/article/models/: __init__.py  models.py  signets.py
demo/article/templates/article/: article_detail.html  article_list_view.html  delete_article.html  edit_article.html  new_article.html
demo/article/templates/signoffs/: comment_signet.html  custom_publish_signoff.html  like_signet.html  publish_signet.html
demo/assignments/: admin.py  approvals.py  apps.py  forms.py  htmx_views.py  models.py  template_tags.py  urls.py  views.py  widget_helpers.py
demo/assignments/migrations/: 0001_initial.py  0002_auto_20240508_1703.py  0003_assignment_status.py
demo/assignments/templates/assignments/: assignment_detail.html  assignment_list_view.html  basic_rendered_approval.html  create_assignment.html  dashboard.html  new_assignment.html
demo/assignments/templates/assignments/htmx_signoffs/: approval.html  (+2 more)
demo/management/commands/: create_article_data.py  create_assignments_data.py  install_demo.py
demo/registration/: forms.py  permissions.py  signoffs.py  urls.py  views.py
demo/registration/templates/registration/: custom_logout.html  login.html  newsletter.html  signup.html  terms_of_service.html  user_profile.html
demo/templates/: base.html
docs/: requirements_docs.txt
docs/module_docs/: approvals.md  base_mod_doc.md  forms.md  module_index.md  signoffs.md
docs/source/: AUTHORS.md  CONTRIBUTING.md  HISTORY.md  changelog.md  conf.py  contributing.md  history.md  home.md  index.md  index_links.md  module_docs_ref.md
docs/source/api_docs/: index.md
docs/source/api_docs/approvals/: approvals.md  index.md  renderers.md  status.md  urls.md
docs/source/api_docs/models/: fields.md  index.md  managers.md  signets.md  stamps.md
docs/source/api_docs/signing_order/: index.md  signing_order.md  signoff_pattern.md
docs/source/api_docs/signoffs/: forms.md  index.md  renderers.md  signoffs.md  urls.md
docs/source/api_docs/utils/: index.md  registry.md  shortcuts.md  utils.md
docs/source/guide/Approvals/: revoke_an_approval.md
docs/source/guide/Signoffs/: revoke_a_signoff.md
docs/source/module_docs/: approvals.md  base_mod_doc.md  forms.md  models.md  module_index.md  signoffs.md
docs/source/templates/: autocreate_template.md
signoffs/: __init__.py  approvals.py  apps.py  forms.py  models.py  process.py  registry.py  settings.py  shortcuts.py  signing_order.py  signoffs.py  urls.py  views.py
signoffs/contrib/approvals/: approvals.py  apps.py  forms.py  models.py
signoffs/contrib/approvals/migrations/: 0001_initial.py
signoffs/contrib/signets/: apps.py  models.py  signoffs.py
signoffs/contrib/signets/migrations/: 0001_initial.py
signoffs/core/: approvals.py  forms.py  process.py  signoffs.py  urls.py  utils.py
signoffs/core/models/: __init__.py  approval_process.py  fields.py  managers.py  signets.py  stamps.py
signoffs/core/renderers/: __init__.py  approvals.py  helpers.py  process.py  signoffs.py
signoffs/core/signing_order/: __init__.py  regex_match.py  signing_order.py  signoff_pattern.py
signoffs/core/signing_order/tests/: test_regex_match.py  test_signoff_pattern.py
signoffs/core/status/: __init__.py  approvals.py
signoffs/core/tests/: fixtures.py  models.py  test_approval_fields.py  test_approval_models.py  test_approval_process.py  test_process.py  test_signoff_fields.py  test_signoff_forms.py  test_signoff_models.py  test_utils.py  test_view_actions.py
signoffs/core/urls/: __init__.py  approvals.py  signoffs.py
signoffs/core/views/: actions.py
signoffs/static/css/: signoffs.css
signoffs/templates/signoffs/approvals/: approval.html
signoffs/templates/signoffs/process/: approval_process.html
signoffs/templates/signoffs/signets/: signet.html  signoff_form.html  signoff_input.html
signoffs/templatetags/: signoff_tags.py  singoff_tags.py
tasks/: __init__.py  clean.py  deps.py  docs.py  pypi.py
tasks/autocreate/: __init__.py  autocreate.py  module.py  resolver.py  utils.py
test_app/: apps.py  models.py  settings.py  urls.py
test_app/migrations/: 0001_initial.py
test_app/templates/: base.html
test_app/templates/testapp/approvals/: detail_view.html
test_app/tests/: test_approval_process.py  test_contrib.py  test_model_fields.py  test_registry.py  test_shortcuts.py  test_signoff_forms.py  test_signoff_models.py
tests/: README.md  __init__.py  settings.py  sqlite.db
tests/exampleapp/: admin.py  apps.py  helpers.py  models.py  urls.py  views.py
tests/exampleapp/migrations/: 0001_initial.py
tests/exampleapp/templates/: approved_bikerack_requests.html  bikeracks.html  content.html  pending_bikerack_requests.html  request_new_bikerack.html  sign_bikerack.html  sign_bikerack_requests.html  sign_content.html
tests/test_app/: __init__.py  apps.py  models.py  signoffs.py  urls.py  views.py
tests/test_app/templates/include/: footer.html  messages.html
tests/test_app/tests/: test_approval_process.py  test_contrib.py  test_model_fields.py  test_registry.py  test_shortcuts.py  test_signoff_forms.py  test_signoff_models.py  test_template_tags.py
tests/testapp/: apps.py  models.py  signoffs.py  urls.py  views.py
tests/testapp/tests/: test_approval_process.py  test_contrib.py  test_model_fields.py  test_registry.py  test_shortcuts.py  test_signoff_forms.py  test_signoff_models.py
(+17 files in other folders)
