# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_signoffs"
version = "0.3.8"
requires-python = ">=3.8, <4.0"
description = 'A mico-framework for collecting lightweight, non-crypto "signatures" for virtually anything.'
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Joseph Fall", email = "powderflask@gmail.com" }
]
keywords = ["django-signoffs",]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
dependencies = [
    "django>=3.2,<5.0",
    "persisting-theory",
    "regex",
]

[project.optional-dependencies]
fsm = [
    "django-fsm",
]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "linkify-it-py",
    "sphinxcontrib_django",
    "sphinx-autodoc2",
]
style = [
    "black",
    "isort",
    "flake8",
    "flake8-bugbear",
]
test = [
    "tox",
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
    "pip-tools",
]

[project.urls]
Homepage = "https://github.com/powderflask/django-signoffs"
Repository = "https://github.com/powderflask/django-signoffs"
Documentation = "https://django-signoffs.readthedocs.io"

[project.scripts]
"manage.py" = "django_signoffs:django_manage"


# Other Tools
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["signoffs", "signoffs.*"]

[tool.bumpver]
current_version = "0.3.8"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"signoffs/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ['version = "{version}"', 'release = "{version}"']

[tool.black]
target-version = ["py38","py39","py310","py311"]

[tool.isort]
profile = "black"
skip_gitignore = true