# Project Configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_signoffs"
version = "0.3.9"
requires-python = ">=3.9, <4.0"
description = 'A mico-framework for collecting lightweight, non-crypto "signatures" for virtually anything.'
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Joseph Fall", email = "powderflask@gmail.com" }
]
keywords = ["django-signoffs",]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Framework :: Django",
]
dependencies = [
    "django>=4.2,<5.0", # can use 3.2 if switch tests to use depr "assertQuerysetEqual" rather than assertQuerySetEqual
    "persisting-theory",
    "regex",
    "typing-extensions",
]

[project.optional-dependencies]
fsm = ["django-fsm"]
style = ["ruff"]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "linkify-it-py",
    "sphinxcontrib_django",
    "sphinx-autodoc2",
    "jinja2",
]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-django",
    "pytest-cov",
    "pytest-sugar",
]
utils = [
    "invoke",
    "bumpver",
    "build",
    "twine",
    "pip-tools",
    "tox",
]

[project.urls]
Homepage = "https://github.com/powderflask/django-signoffs"
Repository = "https://github.com/powderflask/django-signoffs"
Documentation = "https://django-signoffs.readthedocs.io"

[project.scripts]
"manage.py" = "django_signoffs:django_manage"

# <<==================== tools ======================>>

# <----------------- pytest ------------------->
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

# <----------------- ruff ------------------->
[tool.ruff]
fix = false
extend-exclude = [
    "docs",
    "tasks",
    "scrapheap",
    "autocreate",
]

[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
]
extend-ignore = [
    "E203",
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"*/__init__.py"             = ["F401"]
"signoffs/approvals.py"     = ["F401"]
"signoffs/forms.py"         = ["F401"]
"signoffs/models.py"        = ["F401"]
"signoffs/process.py"       = ["F401"]
"signoffs/signing_order.py" = ["F401"]
"signoffs/signoffs.py"      = ["F401"]
"signoffs/views.py"         = ["F401"]
"signoffs/core/utils.py"    = ["C901"]

# <---------------- bumpver ----------------->
[tool.bumpver]
current_version = "0.3.9"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version: {old_version} --> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['version = "{version}"']
"signoffs/__init__.py" = ['__version__ = "{version}"']
"docs/source/conf.py" = ['version = "{version}"', 'release = "{version}"']

# <--------------- setuptools --------------->
[tool.setuptools]
include-package-data = true  # True by default, declarations in MANIFEST.in

[tool.setuptools.packages.find]
include = ["signoffs", "signoffs.*"]


#[tool.black]
#target-version = ["py38","py39","py310","py311"]

#[tool.isort]
#profile = "black"
#skip_gitignore = true